fixed scroll-behavior on mobile UX

--- a/index.css
+++ b/index.css
@@ -3,6 +3,8 @@
 
 html, body {
   height: 100%;
+  overscroll-behavior: none;
+  touch-action: pan-y;
 }
 
 #root {
